--- a/src/components/UserIcon/UserIcon.css
+++ b/src/components/UserIcon/UserIcon.css
@@ -67,7 +67,7 @@ a {
 .progress-fill {
     width: 0;
     height: 100%;
-    background-color: #36BE3C;
+    background-color: var(--green-color);
     position: absolute;
     top: 0;
     left: 0;
