--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,9 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+
+  user-select: none;
+  -webkit-user-select: none;/* For Safari */
+  -moz-user-select: none;/* For Firefox */
+  -ms-user-select: none;
 }
