--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -17,6 +17,5 @@
 }
 
 .submit:hover {
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
-            0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--soft-shadow);
 }
