--- a/src/components/Circles/Circles.css
+++ b/src/components/Circles/Circles.css
@@ -21,7 +21,7 @@
     justify-content: center;
     cursor: pointer;
     margin: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--soft-shadow);
 }
 
 .icon {
