--- a/src/components/StoreComponents/Card/Card.css
+++ b/src/components/StoreComponents/Card/Card.css
@@ -6,7 +6,7 @@
     background-color: var(--cream-color);
     margin: 10px;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: var(--soft-shadow);
     width: 300px;
 }
 
