--- a/src/pages/PlannerPage/PlannerPage.css
+++ b/src/pages/PlannerPage/PlannerPage.css
@@ -24,13 +24,14 @@
     max-width: 450px;
     margin: 0 auto;
     text-align: center;
+    outline: none;
     padding: 20px;
+    font-size: 16px;
     background-color: var(--cream-color);
     border: 2px solid var(--mocha-color);
     border-radius: 7px;
     margin-top: 7%;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
-            0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--soft-shadow);
 }
 
 .form-title {
@@ -47,7 +48,7 @@
     text-align: center;
 }
 
-input[type="text"] {
+.planner-input {
     width: 90%;
     padding: 10px;
     border: 2px solid var(--mocha-color);
@@ -72,6 +73,5 @@ input[type="text"] {
 }
 
 .submit:hover {
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1),
-            0px 4px 6px -4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--soft-shadow);
 }
